# codexPhdProject

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
config/: literature_record.schema.json
data/manual_records/: benchmark_pairs_curated.json  example_record.json  reference_papers_generated.json  seed_literature.json
docs/: literature_collection_guide.md
ilm_wiki/: __init__.py  agents.py  cli.py  domains.py  pdf_agent.py  pdf_records.py  schemas.py  search_adapters.py
output/: 1g_vs_microgravity_benchmark_table.md  gap_matrix.md  microgravity_solidification_wiki.md  variable_groups_consolidated.md
templates/: literature_extraction_template.csv
tests/: test_pipeline_smoke.py
